samples and title update

--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/adomakor412/conda/envs/MyEnv/lib/python3.6/site-packages/dask/config.py:131: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  data = yaml.load(f.read()) or {}\n"
+     ]
+    }
+   ],
    "source": [
     "#import urllib.request\n",
     "import numpy as np\n",
@@ -36,8 +45,8 @@
     "from os import path as op\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "# %matplotlib agg\n",
-    "# %matplotlib agg\n",
+    "%matplotlib agg\n",
+    "%matplotlib agg\n",
     "import xarray as xr\n",
     "import metpy\n",
     "import cartopy.crs as ccrs\n",
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,29 +265,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 'https://noaa-goes16.s3.amazonaws.com/ABI-L1b-RadF/2020/001/00/OR_ABI-L1b-RadF-M6C08_G16_s20200010000216_e20200010009524_c20200010010002.nc'), (1, 'https://noaa-goes16.s3.amazonaws.com/ABI-L1b-RadF/2020/001/00/OR_ABI-L1b-RadF-M6C08_G16_s20200010010216_e20200010019524_c20200010019593.nc'), (2, 'https://noaa-goes16.s3.amazonaws.com/ABI-L1b-RadF/2020/001/00/OR_ABI-L1b-RadF-M6C08_G16_s20200010020216_e20200010029524_c20200010029599.nc'), (3, 'https://noaa-goes16.s3.amazonaws.com/ABI-L1b-RadF/2020/001/00/OR_ABI-L1b-RadF-M6C08_G16_s20200010030216_e20200010039524_c20200010040002.nc'), (4, 'https://noaa-goes16.s3.amazonaws.com/ABI-L1b-RadF/2020/001/00/OR_ABI-L1b-RadF-M6C08_G16_s20200010040216_e20200010049524_c20200010049598.nc'), (5, 'https://noaa-goes16.s3.amazonaws.com/ABI-L1b-RadF/2020/001/00/OR_ABI-L1b-RadF-M6C08_G16_s20200010050216_e20200010059524_c20200010059599.nc')]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/scratch/adomakor412/conda/envs/MyEnv/lib/python3.6/site-packages/ipykernel_launcher.py:5: RuntimeWarning: invalid value encountered in log\n",
-      "  \"\"\"\n"
+      "20200010000\n",
+      "20200010010\n",
+      "20200010020\n",
+      "20200010030\n",
+      "20200010040\n",
+      "20200010050\n"
      ]
     }
    ],
    "source": [
     "search = itertools.product([Sat], [band], [year], [month], [day], [hour])\n",
     "bins = np.linspace(220,250,101)\n",
-    "log = open('log_Histogram.txt','w')\n",
+    "filelog = open('log_Histogram.txt','w')\n",
     "\n",
     "#check for GOES-16 and GOES-17 and plot what is available\n",
     "for SS, bb, yyyy, mm, dd, hr in search:\n",
@@ -312,29 +318,36 @@
     "    \n",
     "    cnt = 0 #keep a counter to avoid crossing FD with similar file names and performance\n",
     "    '''iterate over pairs of GOES NETCDF, download, and convert to numpy'''\n",
-    "    print(list(enumerate(bandURLList16)))\n",
-    "    for i, FD16 in enumerate(bandURLList16): #Last string chars are of this format: c20192220009464.nc   \n",
-    "        print(str(FD16), file=log)        \n",
-    "        cYYYYDDDHHt = FD16[-18:-7]\n",
-    "        t = FD16[-7]\n",
+    "    #print(list(enumerate(bandURLList16)))\n",
+    "    for FD16 in bandURLList16: #Last string chars are of this format: c20192220009464.nc   \n",
+    "        print(FD16, file=filelog)\n",
+    "        \n",
+    "        YYYY = FD16[-17:-13]\n",
+    "        DDD = FD16[-13:-10]\n",
+    "        HH = FD16[-10:-8]\n",
+    "        i = FD16.find('_s')\n",
+    "        MM = FD16[i+11: i+13]\n",
+    "        print(f'{YYYY}{DDD}{HH}{MM}')\n",
+    "        \n",
     "        _FD17 = None\n",
     "        for FD17 in bandURLList17[cnt:i]:\n",
-    "            if cYYYYDDDHHt == FD17[-18:-7]:\n",
+    "            if FD16[i:13] == FD17[i:13]:\n",
     "                cnt +=1\n",
     "                _FD17 = FD17\n",
     "                download17 = requests.get(FD17)\n",
     "                nc17 = open('nc17.nc','wb')\n",
     "                nc17.write(download17.content)\n",
     "                nc17.close()\n",
+    "                myFile_17 = xr.open_dataset('nc17.nc')\n",
     "                npy17 = create_nc_Numpy('nc17.nc', '.')\n",
     "                \n",
     "                '''Load numpy files'''\n",
     "                imageBox_17 = np.load('nc17.npy')\n",
-    "                myFile_17 = xr.open_dataset('nc17.nc')\n",
     "                planck_fk1_17 = float(myFile_17['planck_fk1'].data)\n",
     "                planck_fk2_17 = float(myFile_17['planck_fk2'].data) \n",
     "                planck_bc1_17 = float(myFile_17['planck_bc1'].data)                       \n",
     "                planck_bc2_17 = float(myFile_17['planck_bc2'].data)\n",
+    "                myFile_17.close()\n",
     "                break\n",
     "            else:\n",
     "                _FD17 = None\n",
@@ -356,12 +369,13 @@
     "        planck_fk2_16 = float(myFile_16['planck_fk2'].data) \n",
     "        planck_bc1_16 = float(myFile_16['planck_bc1'].data)                       \n",
     "        planck_bc2_16 = float(myFile_16['planck_bc2'].data)\n",
+    "        myFile_16.close()\n",
     " \n",
     "        '''Create subplot figures and save'''\n",
     "        fig, ((ax1, ax2), (ax3, ax4)) = plt.subplots(2, 2,figsize=(15,15))\n",
     "        \n",
     "        '''Histograms'''\n",
-    "        ax1.set_title(f'GOES-16 ABI Band {bb} Day {mm}-{dd} {hr}:{t}0')\n",
+    "        ax1.set_title(f'GOES-16 ABI Band {bb} Day {mm}-{dd}-{YYYY} {HH}:{MM}')\n",
     "        ax1.set_ylabel('density (unitless)',fontsize = 16)\n",
     "        ax1.set_xlabel('Temperature (K)', fontsize = 16)\n",
     "        Tbox16 = Rad2BT(imageBox_16, planck_fk1_16, planck_fk2_16, planck_bc1_16, planck_bc2_16)\n",
@@ -369,8 +383,9 @@
     "        ax1.axvline(Tbox16.mean(), color='r',label = 'NOAA avg.')\n",
     "        ax1.legend(loc='upper left')\n",
     "        \n",
+    "        \n",
     "        if None != _FD17:\n",
-    "            ax2.set_title(f'GOES-17 ABI Band {bb} Day {mm}-{dd} {hr}:{t}0')\n",
+    "            ax2.set_title(f'GOES-17 ABI Band {bb} Day {mm}-{dd}-{YYYY} {HH}:{MM}')\n",
     "            ax2.set_ylabel('density (unitless)',fontsize = 16)\n",
     "            ax2.set_xlabel('Temperature (K)', fontsize = 16)\n",
     "            Tbox17 = Rad2BT(imageBox_17, planck_fk1_17, planck_fk2_17, planck_bc1_17, planck_bc2_17)\n",
@@ -390,7 +405,7 @@
     "            ax3.plot(sorted(G17), label='G17')\n",
     "            ax3.plot(sorted(G16), label='G16')\n",
     "            ax3.legend(loc = 'upper left')\n",
-    "            ax3.set_title(f'Empirical CDF for Apr-{day}-2019')\n",
+    "            ax3.set_title(f'Empirical CDF for {dd}-{mm}-{yyyy}')\n",
     "            ax3.set_xticks(xticks)\n",
     "            ax3.set_xticklabels(plabels)\n",
     "            ax3.set_xlabel('quantiles')\n",
@@ -415,13 +430,9 @@
     "            ax4.legend(loc = 'upper left')\n",
     "        \n",
     "        #ax.plot([T,T], [0,0.3],'r', label = 'something')\n",
-    "        YYYY = FD16[-17:-13]\n",
-    "        DDD = FD16[-13:-10]\n",
-    "        HH = FD16[-10:-8]\n",
-    "        i = FD16.find('_s')\n",
-    "        MM = FD16[i+8: i+10]\n",
-    "        fig.savefig(op.join(storage,f\"GOES-R_panel_GOES16vsGOES17_FD_{YYYY}{DDD}{HH}{MM}_Band{bb}.png\"));\n",
-    "        plt.close()\n",
+    "        \n",
+    "        fig.savefig(op.join(storage,f\"GOES-R_panel_GOES16vsGOES17_FD_{YYYY}{DDD}{HH}{MM}_Band{bb}.png\"))\n",
+    "        #plt.close()\n",
     "        #GOES17_FPMTemp_GOES16vsGOES17MeanDiff_FD_2020357_000032_Band08.png\n",
     "#     times17, mean17 = getTmean('17', npPath, band, day)\n",
     "#     times16, mean16 = getTmean('16', npPath, band, day)\n",
@@ -442,13 +453,6 @@
     "\n",
     "#     _ = plt.savefig('..'+ op.join(DATAPATH,f\"Mean_temp_unfiltered/04-{str(8+j).zfill(2)}-2019\"))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
