New samples consistent axes and naming convention with reference

--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -265,25 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20200010000\n",
-      "20200010010\n",
-      "20200010020\n",
-      "20200010030\n",
-      "20200010040\n",
-      "20200010050\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "search = itertools.product([Sat], [band], [year], [month], [day], [hour])\n",
-    "bins = np.linspace(220,250,101)\n",
+    "bins = np.linspace(195,255,255-195)\n",
     "filelog = open('log_Histogram.txt','w')\n",
     "\n",
     "#check for GOES-16 and GOES-17 and plot what is available\n",
@@ -327,7 +314,8 @@
     "        HH = FD16[-10:-8]\n",
     "        i = FD16.find('_s')\n",
     "        MM = FD16[i+11: i+13]\n",
-    "        print(f'{YYYY}{DDD}{HH}{MM}')\n",
+    "        ss = FD16[i+13: i+15]\n",
+    "        #print(f'{YYYY}{DDD}{HH}{MM}')\n",
     "        \n",
     "        _FD17 = None\n",
     "        for FD17 in bandURLList17[cnt:i]:\n",
@@ -375,23 +363,24 @@
     "        fig, ((ax1, ax2), (ax3, ax4)) = plt.subplots(2, 2,figsize=(15,15))\n",
     "        \n",
     "        '''Histograms'''\n",
-    "        ax1.set_title(f'GOES-16 ABI Band {bb} Day {mm}-{dd}-{YYYY} {HH}:{MM}')\n",
+    "        ax1.set_title(f'GOES-16 ABI Band {bb} (6.2µm) {mm}-{dd}-{YYYY} {HH}:{MM} UTC')\n",
     "        ax1.set_ylabel('density (unitless)',fontsize = 16)\n",
     "        ax1.set_xlabel('Temperature (K)', fontsize = 16)\n",
     "        Tbox16 = Rad2BT(imageBox_16, planck_fk1_16, planck_fk2_16, planck_bc1_16, planck_bc2_16)\n",
     "        ax1.hist(Tbox16.ravel(), bins = bins, density = True, label = 'Temp dist.')\n",
     "        ax1.axvline(Tbox16.mean(), color='r',label = 'NOAA avg.')\n",
     "        ax1.legend(loc='upper left')\n",
-    "        \n",
+    "        ax1.axis(ymin=0, ymax=0.25)# Check July 15, 2020, 197th day of the year       \n",
     "        \n",
     "        if None != _FD17:\n",
-    "            ax2.set_title(f'GOES-17 ABI Band {bb} Day {mm}-{dd}-{YYYY} {HH}:{MM}')\n",
+    "            ax2.set_title(f'GOES-17 ABI Band {bb} (6.2µm) {mm}-{dd}-{YYYY} {HH}:{MM} UTC')\n",
     "            ax2.set_ylabel('density (unitless)',fontsize = 16)\n",
     "            ax2.set_xlabel('Temperature (K)', fontsize = 16)\n",
     "            Tbox17 = Rad2BT(imageBox_17, planck_fk1_17, planck_fk2_17, planck_bc1_17, planck_bc2_17)\n",
     "            ax2.hist(Tbox17.ravel(), bins = bins, density = True, label = 'Temp dist.')\n",
     "            ax2.axvline(Tbox17.mean(), color='r',label = 'NOAA avg.')\n",
     "            ax2.legend(loc='upper left')\n",
+    "            ax2.axis(ymin=0, ymax=0.25)# Check July 15, 2020, 197th day of the year\n",
     "            \n",
     "            rc = np.vstack([Tbox16.ravel(), Tbox17.ravel()])\n",
     "            XY = rc[:,np.isfinite(rc).all(axis=0)]\n",
@@ -399,7 +388,7 @@
     "            G17 = XY[1]\n",
     "            plabels = ['0%', '25%', '50%', '75%', '100%']\n",
     "            \n",
-    "            '''ECDF'''\n",
+    "            f'''Empirical CDF {mm}-{dd}-{YYYY} {HH}:{MM} UTC'''\n",
     "            xticks = np.arange(len(G17))\n",
     "            xticks = [st.scoreatpercentile(xticks, p) for p in [0, 25, 50, 75, 100]]\n",
     "            ax3.plot(sorted(G17), label='G17')\n",
@@ -409,18 +398,19 @@
     "            ax3.set_xticks(xticks)\n",
     "            ax3.set_xticklabels(plabels)\n",
     "            ax3.set_xlabel('quantiles')\n",
-    "            ax3.set_ylabel('Temperature')\n",
-    "\n",
-    "            '''AUC'''\n",
-    "            _G17 = np.linspace(G17.min(), G17.max(), 1000)\n",
+    "            ax3.set_ylabel('Temperature (K)')\n",
+    "            ax3.axis(ymin=195, ymax=255)\n",
+    "            \n",
+    "            '''Area Under Curve (AUC)'''\n",
+    "            xRange = round(255-195)# Check July 15, 2020, 197th day of the year\n",
+    "            _G17 = np.linspace(G17.min(), G17.max(), xRange)\n",
     "            B = [st.scoreatpercentile(G16, st.percentileofscore(G17,g17s,\n",
     "                kind='strict')) for g17s in _G17]\n",
     "\n",
     "            _B = (B - min(B))/(max(B) - min(B))\n",
     "            _G17n = (_G17 - min(_G17))/(max(_G17) - min(_G17))\n",
     "\n",
-    "            AUC = round(sum(_B)/1000,5)\n",
-    "            #chart[ts] = AUC\n",
+    "            AUC = round(sum(_B)/xRange,5)#Area under curve is sum of x * dx\n",
     "            \n",
     "            ax4.plot(_G17n,_B, label=f\"AUC: {AUC}\")\n",
     "            ax4.set_ylabel('G16')\n",
@@ -428,30 +418,8 @@
     "            ax4.set_title('Transform of G17 to G16')\n",
     "            ax4.set_aspect('equal')\n",
     "            ax4.legend(loc = 'upper left')\n",
-    "        \n",
-    "        #ax.plot([T,T], [0,0.3],'r', label = 'something')\n",
-    "        \n",
-    "        fig.savefig(op.join(storage,f\"GOES-R_panel_GOES16vsGOES17_FD_{YYYY}{DDD}{HH}{MM}_Band{bb}.png\"))\n",
-    "        #plt.close()\n",
-    "        #GOES17_FPMTemp_GOES16vsGOES17MeanDiff_FD_2020357_000032_Band08.png\n",
-    "#     times17, mean17 = getTmean('17', npPath, band, day)\n",
-    "#     times16, mean16 = getTmean('16', npPath, band, day)\n",
-    "\n",
-    "#     ptimes17 = [datetime.strptime(f\"2019{t}\", \"%Y%j%H%M\") for t in times17]\n",
-    "#     ptimes16 = [datetime.strptime(f\"2019{t}\", \"%Y%j%H%M\") for t in times16]\n",
-    "#     fig, ax1 = plt.subplots(figsize=(15,5))#constrained_layout=False\n",
-    "#     _ = ax1.plot_date(ptimes17, mean17 , label=\"GOES-17\", color='tab:red', marker='+', markersize = 16)\n",
-    "#     _ = ax1.plot_date(ptimes16, mean16 , label='GOES-16', color='tab:blue', marker='+', markersize = 16, zorder=-1)\n",
-    "#     _ = ax1.set_ylim(220,260)\n",
-    "#     _ = ax1.tick_params('both', labelsize=18)\n",
-    "#     _ = ax1.legend()\n",
-    "#     _ = ax1.set_title(f'Mean Temperatures (K) for a 401 x 1001 Portion\\n of Band 08 on 04-{str(8+j)}-2019', fontweight ='bold', fontsize = 22)\n",
-    "#     _ = ax1.set_ylabel('Temperature (K)',fontsize = 16)\n",
-    "#     _ = ax1.set_xlabel('time (hours)',fontsize = 16)\n",
-    "#     _ = ax1.xaxis.set_major_formatter(mdates.DateFormatter('%H:%M'))\n",
-    "\n",
-    "\n",
-    "#     _ = plt.savefig('..'+ op.join(DATAPATH,f\"Mean_temp_unfiltered/04-{str(8+j).zfill(2)}-2019\"))\n"
+    "        fig.suptitle('Ronald O. Adomako, City College of New York, NOAA-CESSRST', fontsize=12)\n",
+    "        fig.savefig(op.join(storage,f\"GOES-R_panel_GOES16vsGOES17_FD_{YYYY}{DDD}_{HH}{MM}{ss}_Band{bb}.png\"))\n"
    ]
   }
  ],
