Running script for July 15

--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -251,16 +251,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sat = 16\n",
+    "# band = 8\n",
+    "# year = 2020\n",
+    "# month = 1\n",
+    "# day = 1\n",
+    "# hour = 0\n",
+    "\n",
     "Sat = 16\n",
     "band = 8\n",
     "year = 2020\n",
-    "month = 1\n",
-    "day = 1\n",
-    "hour = 0"
+    "month = 7\n",
+    "day = 15\n",
+    "hour = 24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#search = itertools.product([Sat], [band], [year], [month], [day], [hour])\n",
+    "search = list(itertools.product([Sat], [band], [year], [month], [day], list(range(hour))))\n",
+    "#print(search)"
    ]
   },
   {
@@ -269,7 +287,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "search = itertools.product([Sat], [band], [year], [month], [day], [hour])\n",
     "bins = np.linspace(195,255,255-195)\n",
     "filelog = open('log_Histogram.txt','w')\n",
     "\n",
