CIMSS distrubution panels, percent units on histograms, mixed color half transparency plot, confidence interval calculation.

--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -44,7 +44,7 @@
     "#import os.path as op\n",
     "from os import path as op\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
+    "#%matplotlib inline\n",
     "%matplotlib agg\n",
     "%matplotlib agg\n",
     "import xarray as xr\n",
@@ -56,6 +56,7 @@
     "sns.set(style=\"darkgrid\")\n",
     "from pathlib import Path\n",
     "from subprocess import Popen\n",
+    "from matplotlib.ticker import PercentFormatter\n",
     "\n",
     "import matplotlib.dates as mdates\n",
     "from datetime import datetime"
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,12 +268,12 @@
     "year = 2020\n",
     "month = 7\n",
     "day = 15\n",
-    "hour = 24"
+    "hour = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,20 +382,22 @@
     "        \n",
     "        '''Histograms'''\n",
     "        ax1.set_title(f'GOES-16 ABI Band {bb} (6.2µm) {mm}-{dd}-{YYYY} {HH}:{MM} UTC')\n",
-    "        ax1.set_ylabel('density (unitless)',fontsize = 16)\n",
-    "        ax1.set_xlabel('Temperature (K)', fontsize = 16)\n",
+    "        ax1.set_ylabel('density')#,fontsize = 16)\n",
+    "        ax1.set_xlabel('Temperature (K)')#, fontsize = 16)\n",
     "        Tbox16 = Rad2BT(imageBox_16, planck_fk1_16, planck_fk2_16, planck_bc1_16, planck_bc2_16)\n",
-    "        ax1.hist(Tbox16.ravel(), bins = bins, density = True, label = 'Temp dist.')\n",
+    "        ax1.hist(Tbox16.ravel(), bins = bins, density = True, label = 'Temp dist.')       \n",
+    "        plt.gca().yaxis.set_major_formatter(PercentFormatter(1))\n",
     "        ax1.axvline(Tbox16.mean(), color='r',label = 'NOAA avg.')\n",
     "        ax1.legend(loc='upper left')\n",
     "        ax1.axis(ymin=0, ymax=0.25)# Check July 15, 2020, 197th day of the year       \n",
     "        \n",
     "        if None != _FD17:\n",
     "            ax2.set_title(f'GOES-17 ABI Band {bb} (6.2µm) {mm}-{dd}-{YYYY} {HH}:{MM} UTC')\n",
-    "            ax2.set_ylabel('density (unitless)',fontsize = 16)\n",
-    "            ax2.set_xlabel('Temperature (K)', fontsize = 16)\n",
+    "            ax2.set_ylabel('density')#,fontsize = 16)\n",
+    "            ax2.set_xlabel('Temperature (K)')#, fontsize = 16)\n",
     "            Tbox17 = Rad2BT(imageBox_17, planck_fk1_17, planck_fk2_17, planck_bc1_17, planck_bc2_17)\n",
     "            ax2.hist(Tbox17.ravel(), bins = bins, density = True, label = 'Temp dist.')\n",
+    "            plt.gca().yaxis.set_major_formatter(PercentFormatter(1))\n",
     "            ax2.axvline(Tbox17.mean(), color='r',label = 'NOAA avg.')\n",
     "            ax2.legend(loc='upper left')\n",
     "            ax2.axis(ymin=0, ymax=0.25)# Check July 15, 2020, 197th day of the year\n",
@@ -408,8 +411,8 @@
     "            f'''Empirical CDF {mm}-{dd}-{YYYY} {HH}:{MM} UTC'''\n",
     "            xticks = np.arange(len(G17))\n",
     "            xticks = [st.scoreatpercentile(xticks, p) for p in [0, 25, 50, 75, 100]]\n",
-    "            ax3.plot(sorted(G17), label='G17')\n",
-    "            ax3.plot(sorted(G16), label='G16')\n",
+    "            ax3.plot(sorted(G17), label='G17',linewidth=None, alpha=0.5)\n",
+    "            ax3.plot(sorted(G16), label='G16',linewidth=None, alpha=0.5)\n",
     "            ax3.legend(loc = 'upper left')\n",
     "            ax3.set_title(f'Empirical CDF for {dd}-{mm}-{yyyy}')\n",
     "            ax3.set_xticks(xticks)\n",
@@ -430,14 +433,26 @@
     "            AUC = round(sum(_B)/xRange,5)#Area under curve is sum of x * dx\n",
     "            \n",
     "            ax4.plot(_G17n,_B, label=f\"AUC: {AUC}\")\n",
+    "            ax4.legend(loc = 'upper left')\n",
     "            ax4.set_ylabel('G16')\n",
     "            ax4.set_xlabel('G17')\n",
     "            ax4.set_title('Transform of G17 to G16')\n",
     "            ax4.set_aspect('equal')\n",
-    "            ax4.legend(loc = 'upper left')\n",
-    "        fig.suptitle('Ronald O. Adomako, City College of New York, NOAA-CESSRST', fontsize=12)\n",
-    "        fig.savefig(op.join(storage,f\"GOES-R_panel_GOES16vsGOES17_FD_{YYYY}{DDD}_{HH}{MM}{ss}_Band{bb}.png\"))\n"
+    "            ECI = 1-2*abs(0.5-AUC)\n",
+    "            ax4.text(0, 0.75, f'ECI: {round(100*ECI,2)}%', style='italic',\n",
+    "            bbox={'alpha': 0.5, 'pad': 10})\n",
+    "            \n",
+    "        fig.suptitle('Ronald O.S. Adomako, City College of New York, NOAA-CESSRST', fontsize=12)\n",
+    "        folder = op.join(storage,'July15_2020')\n",
+    "        fig.savefig(op.join(folder,f\"GOES-R_panel_GOES16vsGOES17_FD_{YYYY}{DDD}_{HH}{MM}{ss}_Band{bb}.png\"))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
