July over the chart sample, 2020 run

--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -266,19 +266,19 @@
     "Sat = 16\n",
     "band = 8\n",
     "year = 2020\n",
-    "month = 7\n",
-    "day = 15\n",
-    "hour = 1"
+    "month = 12\n",
+    "day = 31\n",
+    "hour = 24"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#search = itertools.product([Sat], [band], [year], [month], [day], [hour])\n",
-    "search = list(itertools.product([Sat], [band], [year], [month], [day], list(range(hour))))\n",
+    "search = list(itertools.product([Sat], list(range(band)), list(range(year)), list(range(month)), list(range(day)), list(range(hour))))\n",
     "#print(search)"
    ]
   },
@@ -386,7 +386,7 @@
     "        ax1.set_xlabel('Temperature (K)')#, fontsize = 16)\n",
     "        Tbox16 = Rad2BT(imageBox_16, planck_fk1_16, planck_fk2_16, planck_bc1_16, planck_bc2_16)\n",
     "        ax1.hist(Tbox16.ravel(), bins = bins, density = True, label = 'Temp dist.')       \n",
-    "        plt.gca().yaxis.set_major_formatter(PercentFormatter(1))\n",
+    "        ax1.yaxis.set_major_formatter(PercentFormatter(1))\n",
     "        ax1.axvline(Tbox16.mean(), color='r',label = 'NOAA avg.')\n",
     "        ax1.legend(loc='upper left')\n",
     "        ax1.axis(ymin=0, ymax=0.25)# Check July 15, 2020, 197th day of the year       \n",
@@ -397,7 +397,7 @@
     "            ax2.set_xlabel('Temperature (K)')#, fontsize = 16)\n",
     "            Tbox17 = Rad2BT(imageBox_17, planck_fk1_17, planck_fk2_17, planck_bc1_17, planck_bc2_17)\n",
     "            ax2.hist(Tbox17.ravel(), bins = bins, density = True, label = 'Temp dist.')\n",
-    "            plt.gca().yaxis.set_major_formatter(PercentFormatter(1))\n",
+    "            ax2.yaxis.set_major_formatter(PercentFormatter(1))\n",
     "            ax2.axvline(Tbox17.mean(), color='r',label = 'NOAA avg.')\n",
     "            ax2.legend(loc='upper left')\n",
     "            ax2.axis(ymin=0, ymax=0.25)# Check July 15, 2020, 197th day of the year\n",
@@ -443,7 +443,7 @@
     "            bbox={'alpha': 0.5, 'pad': 10})\n",
     "            \n",
     "        fig.suptitle('Ronald O.S. Adomako, City College of New York, NOAA-CESSRST', fontsize=12)\n",
-    "        folder = op.join(storage,'July15_2020')\n",
+    "        folder = op.join(storage,'2020')\n",
     "        fig.savefig(op.join(folder,f\"GOES-R_panel_GOES16vsGOES17_FD_{YYYY}{DDD}_{HH}{MM}{ss}_Band{bb}.png\"))\n"
    ]
   },
