running 2020 png, corrected search set itertools

--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -273,12 +273,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#search = itertools.product([Sat], [band], [year], [month], [day], [hour])\n",
-    "search = list(itertools.product([Sat], list(range(band)), list(range(year)), list(range(month)), list(range(day)), list(range(hour))))\n",
+    "#search = itertools.product([Sat], [band], [year], [month], [day], list(range(hour)))\n",
+    "search = list(itertools.product([Sat],\\\n",
+    "        [band],\\\n",
+    "        [year],\\\n",
+    "        list(range(month+1)[1:]),\\\n",
+    "        list(range(day+1)[1:]),\\\n",
+    "        list(range(hour))))\n",
     "#print(search)"
    ]
   },
